--- a/S1P1.css
+++ b/S1P1.css
@@ -40,7 +40,7 @@
     color: rgb(203, 61, 0);
 }
 
-/* 11 DA RIVEDERE */
+/* 11 */
 .blog-pagination a:nth-child(2){
     background-color:  rgb(21, 15, 10);
 }
